--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@
         <div class="row">
           <div class="col-12 text-center">
             <div class="copy-right-info">
-              <p>&copy; 2023. <a href="https://github.com/Hendrickhz/web-design-with-bootstrap5-and-sass.git">Portfolio Web Design</a> | Created by <a href="https://github.com/Hendrickhz">Hendrick</a></p>
+              <p>&copy; 2023. <a href="https://github.com/Hendrickhz/web-design-with-bootstrap-and-sass">Portfolio Web Design</a> | Created by <a href="https://github.com/Hendrickhz">Hendrick</a></p>
             </div>
           </div>
         </div>
